force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
  <label>Purchase</label>
  <pluralLabel>Purchases</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Purchase Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>