force-app/main/default/objects/Purchase__c/fields/ClientId__c.field-meta.xml
<CustomField>
  <fullName>ClientId__c</fullName>
  <label>Client</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Purchases</relationshipLabel>
  <relationshipName>Purchases</relationshipName>
</CustomField>