force-app/main/default/objects/Purchase__c/fields/TotalItems__c.field-meta.xml
<CustomField>
  <fullName>TotalItems__c</fullName>
  <label>Total Items</label>
  <type>Number</type>
  <precision>16</precision>
  <scale>0</scale>
</CustomField>